Update from https://github.com/funlessdev/funless/commit/110c69a31453c398f40f11070a68ac30022cdcae
