# model_single_app_result.go
@@ -1,0 +1,126 @@
+/*
+FunLess Platfom API
+
+The API for the FunLess Platform
+
+API version: 0.5
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"encoding/json"
+)
+
+// checks if the SingleAppResult type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &SingleAppResult{}
+
+// SingleAppResult struct for SingleAppResult
+type SingleAppResult struct {
+	Data *SingleAppResultData `json:"data,omitempty"`
+}
+
+// NewSingleAppResult instantiates a new SingleAppResult object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewSingleAppResult() *SingleAppResult {
+	this := SingleAppResult{}
+	return &this
+}
+
+// NewSingleAppResultWithDefaults instantiates a new SingleAppResult object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewSingleAppResultWithDefaults() *SingleAppResult {
+	this := SingleAppResult{}
+	return &this
+}
+
+// GetData returns the Data field value if set, zero value otherwise.
+func (o *SingleAppResult) GetData() SingleAppResultData {
+	if o == nil || IsNil(o.Data) {
+		var ret SingleAppResultData
+		return ret
+	}
+	return *o.Data
+}
+
+// GetDataOk returns a tuple with the Data field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *SingleAppResult) GetDataOk() (*SingleAppResultData, bool) {
+	if o == nil || IsNil(o.Data) {
+		return nil, false
+	}
+	return o.Data, true
+}
+
+// HasData returns a boolean if a field has been set.
+func (o *SingleAppResult) HasData() bool {
+	if o != nil && !IsNil(o.Data) {
+		return true
+	}
+
+	return false
+}
+
+// SetData gets a reference to the given SingleAppResultData and assigns it to the Data field.
+func (o *SingleAppResult) SetData(v SingleAppResultData) {
+	o.Data = &v
+}
+
+func (o SingleAppResult) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o SingleAppResult) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	if !IsNil(o.Data) {
+		toSerialize["data"] = o.Data
+	}
+	return toSerialize, nil
+}
+
+type NullableSingleAppResult struct {
+	value *SingleAppResult
+	isSet bool
+}
+
+func (v NullableSingleAppResult) Get() *SingleAppResult {
+	return v.value
+}
+
+func (v *NullableSingleAppResult) Set(val *SingleAppResult) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableSingleAppResult) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableSingleAppResult) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableSingleAppResult(val *SingleAppResult) *NullableSingleAppResult {
+	return &NullableSingleAppResult{value: val, isSet: true}
+}
+
+func (v NullableSingleAppResult) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableSingleAppResult) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
